# FileOrganiser

./: README.md  pyproject.toml
fileorganiser/: classifier.py  organizer.py
tests/: test_organizer.py
