[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fileorganiser"
version = "0.1.0"
description = "AI-powered file organiser using a naive Bayesian classifier"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "PyPDF2>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fileorganiser*"]
